hw5/kuber/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-user-crud
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: my-user-crud
  template:
    metadata:
      labels:
        app: my-user-crud
    spec:
      automountServiceAccountToken: false
      containers:
        - name: my-user-crud
          image: antonkurudinov/otus_hw5:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
              name: my-app-port
            - containerPort: 9464
              name: my-metric-port
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 10
