hw5/kuber/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-user-crud-svc
spec:
  selector:
    app: my-user-crud
  ports:
    - protocol: TCP
      port: 80
      targetPort: my-app-port
      name: web-port
  type: NodePort
