hw5/kuber/ServiceMetrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-metrics-svc
spec:
  selector:
    app: my-user-crud
  ports:
    - protocol: TCP
      port: 9464
      targetPort: my-metric-port
      name: metrics-port
  type: NodePort
