hw5/kuber/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-user-crud-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: my-user-crud-svc
      port:
        number: 80
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-user-crud-svc
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: my-metrics-svc
                port:
                  number: 9464
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-user-crud-svc
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: my-metrics-svc
                port:
                  number: 9464
    - host: host.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-user-crud-svc
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: my-metrics-svc
                port:
                  number: 9464
